@@ -41,6 +41,9 @@ Changes since 2.1.4
     container object when using the "p" command.
 18. src/slarrfun.c: Added a "sumsq" function, which sums over the
     squares of the elements of an array.
+19. src/slsignal.c: Added SLsystem_intr, which unlike SLsystem does
+    not ignore SIGINT by the calling process.  This function is
+    available to the interpreter via system_intr.
 
 {{{ Previous Versions
 
